force-app/main/default/objects/Project_Risk__c/Project_Risk__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><description>Engagement risk, action, accountable owner and closure evidence used by delivery and closeout gates.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing>
<label>Project Risk</label><nameField><displayFormat>RISK-{00000}</displayFormat><label>Project Risk Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>Project Risks</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>