force-app/main/default/objects/Project_Risk__c/fields/Age_Days__c.field-meta.xml
<CustomField><fullName>Age_Days__c</fullName><description>Age of the open risk at the latest snapshot.</description><label>Age Days</label><precision>7</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>