force-app/main/default/objects/Project_Risk__c/fields/Closed_At__c.field-meta.xml
<CustomField><fullName>Closed_At__c</fullName><label>Closed At</label><type>DateTime</type></CustomField>