force-app/main/default/objects/Project_Risk__c/fields/Closure_Note__c.field-meta.xml
<CustomField><fullName>Closure_Note__c</fullName><label>Closure Note</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>