force-app/main/default/objects/Project_Risk__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><label>Engagement</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Project Risks</relationshipLabel><relationshipName>Project_Risks</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>