force-app/main/default/objects/Project_Risk__c/fields/Exposure_Score__c.field-meta.xml
<CustomField><fullName>Exposure_Score__c</fullName><description>Probability multiplied by impact.</description><label>Exposure Score</label><precision>10</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>