force-app/main/default/objects/Project_Risk__c/fields/Impact_Score__c.field-meta.xml
<CustomField><fullName>Impact_Score__c</fullName><description>Standardized delivery or economic impact score.</description><label>Impact Score</label><precision>5</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>