force-app/main/default/objects/Project_Risk__c/fields/Mitigation__c.field-meta.xml
<CustomField><fullName>Mitigation__c</fullName><label>Mitigation</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>