force-app/main/default/objects/Project_Risk__c/fields/Mitigation_Overdue__c.field-meta.xml
<CustomField><fullName>Mitigation_Overdue__c</fullName><defaultValue>false</defaultValue><description>True when a mitigation action remains open beyond its due date.</description><label>Mitigation Overdue</label><trackHistory>false</trackHistory><type>Checkbox</type></CustomField>