force-app/main/default/objects/Project_Risk__c/fields/Owner_User__c.field-meta.xml
<CustomField><fullName>Owner_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Accountable Owner</label><referenceTo>User</referenceTo><relationshipLabel>Owned Project Risks</relationshipLabel><relationshipName>Owned_Project_Risks</relationshipName><type>Lookup</type></CustomField>