force-app/main/default/objects/Project_Risk__c/fields/Probability_Percent__c.field-meta.xml
<CustomField><fullName>Probability_Percent__c</fullName><description>Estimated likelihood of the risk materializing.</description><label>Probability Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>