force-app/main/default/objects/Project_Risk__c/fields/Severity__c.field-meta.xml
<CustomField><fullName>Severity__c</fullName><label>Severity</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Low</fullName><default>false</default><label>Low</label></value><value><fullName>Medium</fullName><default>true</default><label>Medium</label></value><value><fullName>High</fullName><default>false</default><label>High</label></value><value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
</valueSetDefinition></valueSet></CustomField>