force-app/main/default/objects/Project_Risk__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Open</fullName><default>true</default><label>Open</label></value><value><fullName>Mitigating</fullName><default>false</default><label>Mitigating</label></value><value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value><value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
</valueSetDefinition></valueSet></CustomField>