force-app/main/default/objects/Project_Risk__c/fields/Title__c.field-meta.xml
<CustomField><fullName>Title__c</fullName><label>Risk Title</label><length>255</length><required>true</required><type>Text</type></CustomField>