force-app/main/default/objects/Project_Risk__c/listViews/Open_High_Risks.listView-meta.xml
<ListView><fullName>Open_High_Risks</fullName><columns>NAME</columns><columns>Title__c</columns><columns>Engagement__c</columns><columns>Severity__c</columns><columns>Status__c</columns><columns>Owner_User__c</columns><columns>Due_Date__c</columns><filterScope>Everything</filterScope><filters><field>Severity__c</field><operation>equals</operation><value>High</value></filters><filters><field>Status__c</field><operation>notEqual</operation><value>Closed</value></filters><label>Open High Risks</label></ListView>